# HamburgerBuilder

./: CMakeLists.txt  README.md  hamburger.cpp  hamburger.hpp  tests.cpp
.github/workflows/: build.yml
